--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build: .
@@ -7,11 +5,15 @@ services:
     env_file: .env
     ports:
       - "8000:8000"
-    command: >
-      uvicorn app:app
-      --host 0.0.0.0
-      --port 8000
-      --reload
+    depends_on:
+      - mongodb
+    command: [
+      "uvicorn", 
+      "app:app", 
+      "--host", "0.0.0.0", 
+      "--port", "8000", 
+      "--reload"
+    ] 
     networks:
       - ai_network
 
@@ -28,6 +30,22 @@ services:
     networks:
       - ai_network
 
+  mongodb:
+    image: mongo:7
+    container_name: ai_mongo
+    restart: always
+    environment:
+      MONGO_INITDB_DATABASE: OneBitArticle
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - ai_network
+
 networks:
   ai_network:
     driver: bridge
+
+volumes:
+  mongo_data:
